Add texture swizzle back to command buffer.

If it's ES3 context, allow them. If it's WebGL2 context, disallow them.

BUG=669168
TEST=gpu_unittests
R=piman@chromium.org
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2543033002
Cr-Commit-Position: refs/heads/master@{#435794}

Former-commit-id: 90dcedd24853cdca918845ba57a13d9856c8d24e